--- a/spa-build-config.json
+++ b/spa-build-config.json
@@ -1,5 +1,6 @@
 {
   "frontendModules":{
+    "@openmrs/esm-dispensing-app":"next",
     "@pih/esm-refapp-navbar-app":"next",
     "@pih/esm-referrals-queue-app":"next"
   },
