--- a/spa-build-config.json
+++ b/spa-build-config.json
@@ -1,5 +1,6 @@
 {
   "frontendModules":{
+    "@pih/esm-commons-app":"next",
     "@pih/esm-referrals-queue-app":"next",
 
     "@openmrs/esm-active-visits-app": "next",
@@ -24,7 +25,6 @@
     "@openmrs/esm-patient-flags-app": "next",
     "@openmrs/esm-patient-forms-app": "next",
     "@openmrs/esm-patient-immunizations-app": "next",
-    "@openmrs/esm-patient-labs-app": "next",
     "@openmrs/esm-patient-list-management-app": "next",
     "@openmrs/esm-patient-lists-app": "next",
     "@openmrs/esm-patient-medications-app": "next",
@@ -33,6 +33,7 @@
     "@openmrs/esm-patient-programs-app": "next",
     "@openmrs/esm-patient-registration-app": "next",
     "@openmrs/esm-patient-search-app": "next",
+    "@openmrs/esm-patient-tests-app": "next",
     "@openmrs/esm-patient-vitals-app": "next",
     "@openmrs/esm-primary-navigation-app": "next",
     "@openmrs/esm-service-queues-app": "next",
