--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.pih.openmrs</groupId>
     <artifactId>openmrs-frontend-zl</artifactId>
-    <version>1.8.0</version>
+    <version>1.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>ZL Frontend</name>
     <url>https://github.com/PIH/openmrs-frontend-zl</url>
